2007-07-16 19:48  taphorn

	* NEWS, build.xml, sblim-wbemsmt-webapp.conf,
	  sblim-wbemsmt-webapp.spec: Fix for issue [ 1754931 ]
	  wbemsmt-webapp: Upgrade to build environment

2007-07-09 09:48  mbauschert

	* .classpath, .project, .settings/.component: Fix [ 1750200 ]
	  wbemsmt-client: update jar references

2007-07-07 00:06  taphorn

	* ChangeLog, NEWS, README, build.xml, sblim-wbemsmt-webapp.spec:
	  Preparation for 0.5.0 release

2007-07-03 08:53  mbauschert

	* SlpSupport: Fix [ 1746923 ] wbemsmt-webapp: docu for slp
	  config/usage

2007-07-02 16:58  mbauschert

	* .metadata/webapp/WEB-INF/.cvsignore: added cvs ignore for
	  pageflow file

2007-07-02 16:57  mbauschert

	* .metadata/webapp/WEB-INF/faces-config.pageflow,
	  java/org/sblim/wbemsmt/webapp/jsf/LoginCheckBean.java,
	  java/org/sblim/wbemsmt/webapp/jsf/LoginFileGenerator.java,
	  java/org/sblim/wbemsmt/webapp/jsf/webapp_messages.properties,
	  java/org/sblim/wbemsmt/webapp/jsf/webapp_messages_de.properties,
	  java/org/sblim/wbemsmt/webapp/jsf/webapp_messages_en.properties,
	  java/org/sblim/wbemsmt/webapp/jsf/admin/AdminBean.java,
	  java/org/sblim/wbemsmt/webapp/jsf/admin/HostEntry.java,
	  java/org/sblim/wbemsmt/webapp/jsf/embedded/LoginCheckBean.java,
	  webapp/cimomLogin.jsp, webapp/login.jsp, webapp/loginMulti.jsp,
	  webapp/admin/adminHost.jsp: Fix [ 1746585 ] wbemsmt-admin:
	  namespace for application

2007-06-21 11:24  mbauschert

	* java/org/sblim/wbemsmt/webapp/jsf/admin/AdminBean.java: Fix [
	  1740803 ] wbemsmt-slp: use treeconfig to check for slp hosts

2007-06-21 11:23  mbauschert

	* .classpath, .project, .settings/.component: fixed project
	  classpath values

2007-06-15 13:27  mbauschert

	* java/org/sblim/wbemsmt/webapp/jsf/FacesMessagesComparator.java,
	  java/org/sblim/wbemsmt/webapp/jsf/LoginCheckBean.java,
	  java/org/sblim/wbemsmt/webapp/jsf/WbemsmtWebAppBean.java,
	  java/org/sblim/wbemsmt/webapp/jsf/webapp_messages.properties,